# picone

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs  util.rs
src/onedrive/: client.rs  credential.rs  mod.rs
