[package]
name = "picone"
version = "0.1.0"
authors = ["heymind <heymind@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
reqwest = { version = "0.10", features = ["json","blocking"] }
dotenv = "0.15.0"
anyhow = "1.0"
serde_json = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
serde =  { version = "1.0", features = ["derive"] }
multipart = "0.16.1"
nanoid = "0.2.0"
rocket_contrib =  { version = "0.4.2", features = ["json"] }
